src/QBrush.h


// 
// This file has been automatically generated by RaQt_maker V0.0.2.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQBrushCtor_1();
EXTERNC void * QWQBrushCtor_2(int  bs);
EXTERNC void * QWQBrushCtor_3(void * color, int  bs);
EXTERNC void  QWQBrushsetStyle(void * obj, int  arg1);
EXTERNC void  QWQBrushsetColor_1(void * obj, void * color);
EXTERNC void QWQBrushDtor(void *);